[package]
name = "pallet-evm-precompile-simple"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Simple precompiles for EVM pallet."
repository = "https://github.com/paritytech/frontier/"

[dependencies]
ripemd = { version = "0.1", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
secp256k1 = { version = "0.24.0", features = ["recovery", "global-context"] }

# Substrate
# sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

# Frontier
fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }

[dev-dependencies]
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }

[features]
default = ["std"]
std = [
	"ripemd/std",
	# Substrate
	#"sp-io/std",
	# Frontier
	"fp-evm/std",
]
